@@ -1,5 +1,7 @@
 Endless tings to to...
 
+- for configure : make distclean with more action
+
 - fcntl for output
 - ESD/OSS as option
 - Menu bar with icons
