@@ -1,0 +1,25 @@
+#!/bin/sh
+
+test Makefile && make distclean
+
+rm aux/*
+
+for PAT in "*~" stamp-h.in Makefile Makefile.in configure "t.*" "tmp.*" "*.bak" ; do
+  find -name "$PAT" -exec rm "{}" \;
+done
+
+rm t config.* configure.scan src/config.h 2>/dev/null
+
+test "$1" = "-c" && exit
+
+autoscan
+aclocal -I /opt/gnome2/share/aclocal
+autoconf
+autoheader
+automake --add-missing --copy --include-deps --foreign
+
+test "$1" = "-b" || exit 0
+
+./configure
+make
+
